Fixing google analytics for multiple collections and adding black background to openseadragon on IE 11.

--- a/css/pages.css
+++ b/css/pages.css
@@ -705,3 +705,8 @@ button.BRicon.info {
     overflow-y:scroll;
     overflow-x:hidden;
 }
+
+/* IE 11 creates a DIV and not a canvas element, so it has a white background */
+.openseadragon-canvas div {
+    background-color: rgb(0, 0, 0) !important;
+}
